[tool.poetry]
name = "pytls-ca"
version = "0.0.1"
description = "Quickly create self-signed TLS certificates for your local development environment."
authors = ["Rodney Rodriguez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
cryptography = "^42.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytls = 'pytls.pytls:cli'

[tool.ruff]
line-length = 120